[gd_scene load_steps=43 format=3 uid="uid://dgyf1i48s3iys"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_xqvjk"]
[ext_resource type="PackedScene" uid="uid://b4vnvuheoq6i5" path="res://Scenes/Mesh/Potion_4.tscn" id="2_cw1pp"]
[ext_resource type="Script" path="res://Scenes/Player/CameraLiberator.gd" id="4_bpjyo"]
[ext_resource type="PackedScene" uid="uid://c5hdnvohh05nk" path="res://Scenes/Mesh/Octahedron.tscn" id="5_nhg1m"]
[ext_resource type="PackedScene" uid="uid://xjmyvah4ga17" path="res://Scenes/Tool/Shader/ShaderHandler.tscn" id="6_pq1f3"]
[ext_resource type="Script" path="res://Scenes/Player/WaterShaderHandler.gd" id="7_bm8x7"]
[ext_resource type="AudioStream" uid="uid://dljsn7rq5kk5v" path="res://Assets/SFX/steps/step_grass1.ogg" id="7_eekrp"]
[ext_resource type="AudioStream" uid="uid://cojkxv2a0qfd8" path="res://Assets/SFX/steps/step_grass2.ogg" id="8_gaafs"]
[ext_resource type="AudioStream" uid="uid://dnfm1qb28qaos" path="res://Assets/SFX/steps/step_grass3.ogg" id="9_wg75q"]
[ext_resource type="AudioStream" uid="uid://d12hp7b7vxg3q" path="res://Assets/SFX/steps/step_grass4.ogg" id="10_4ppvy"]
[ext_resource type="AudioStream" uid="uid://bmlueuyo5ljut" path="res://Assets/SFX/steps/step_grass5.ogg" id="11_27m27"]
[ext_resource type="AudioStream" uid="uid://boj5mgkp2hi5m" path="res://Assets/SFX/steps/step_grass6.ogg" id="12_6mif6"]
[ext_resource type="AudioStream" uid="uid://dkubehmooiplf" path="res://Assets/SFX/steps/step_grass7.ogg" id="13_lak5j"]
[ext_resource type="AudioStream" uid="uid://bs3t7fp8hohm1" path="res://Assets/SFX/steps/step_concrete1.ogg" id="14_0sv8c"]
[ext_resource type="AudioStream" uid="uid://crgaxl2kpq4nd" path="res://Assets/SFX/steps/step_concrete2.ogg" id="15_7vm7y"]
[ext_resource type="AudioStream" uid="uid://cpbyw4uqd8t7p" path="res://Assets/SFX/steps/step_concrete3.ogg" id="16_wsyuw"]
[ext_resource type="AudioStream" uid="uid://x40n7jlhk1xc" path="res://Assets/SFX/steps/step_concrete4.ogg" id="17_6dwbu"]
[ext_resource type="AudioStream" uid="uid://ca00aki0im6ow" path="res://Assets/SFX/steps/step_concrete5.ogg" id="18_65au2"]
[ext_resource type="AudioStream" uid="uid://xokapajx3b64" path="res://Assets/SFX/steps/step_concrete6.ogg" id="19_danf2"]
[ext_resource type="AudioStream" uid="uid://b1qs6ymqr3xvr" path="res://Assets/SFX/steps/step_metal1.ogg" id="20_ntyxb"]
[ext_resource type="AudioStream" uid="uid://dtcsu6nac76rb" path="res://Assets/SFX/steps/step_metal2.ogg" id="21_traqb"]
[ext_resource type="AudioStream" uid="uid://cqgyywqqu7rma" path="res://Assets/SFX/steps/step_metal11.ogg" id="22_pa0cl"]
[ext_resource type="AudioStream" uid="uid://cfx2ecrdd6w5w" path="res://Assets/SFX/steps/step_metal3.ogg" id="23_hsdln"]
[ext_resource type="AudioStream" uid="uid://d1dfv7n08yfey" path="res://Assets/SFX/steps/step_metal4.ogg" id="24_owb3o"]
[ext_resource type="AudioStream" uid="uid://hubime1rhmus" path="res://Assets/SFX/steps/step_metal5.ogg" id="25_8uy8o"]
[ext_resource type="AudioStream" uid="uid://dnymv3vrxrhe" path="res://Assets/SFX/steps/step_metal6.ogg" id="26_526r8"]
[ext_resource type="AudioStream" uid="uid://cnr1gu4a0xlgk" path="res://Assets/SFX/steps/step_metal7.ogg" id="27_vm211"]
[ext_resource type="AudioStream" uid="uid://c0nt288qtj0rt" path="res://Assets/SFX/steps/step_metal8.ogg" id="28_0yhj6"]
[ext_resource type="AudioStream" uid="uid://e5s6418frqki" path="res://Assets/SFX/steps/step_metal9.ogg" id="29_8u3k5"]
[ext_resource type="AudioStream" uid="uid://cvi03uxmew1pq" path="res://Assets/SFX/steps/step_metal10.ogg" id="30_ld8dl"]
[ext_resource type="Texture2D" uid="uid://b0m2d12q2iocw" path="res://Assets/Shapes/square.png" id="31_qwdlg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nngex"]
size = Vector3(1, 0.62793, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_qvij2"]
radius = 16.088

[sub_resource type="SphereShape3D" id="SphereShape3D_xy7vv"]
radius = 1.135

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lvwh6"]
streams_count = 7
stream_0/stream = ExtResource("7_eekrp")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_gaafs")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_wg75q")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_4ppvy")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_27m27")
stream_4/weight = 1.0
stream_5/stream = ExtResource("12_6mif6")
stream_5/weight = 1.0
stream_6/stream = ExtResource("13_lak5j")
stream_6/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8n2cv"]
streams_count = 6
stream_0/stream = ExtResource("14_0sv8c")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_7vm7y")
stream_1/weight = 1.0
stream_2/stream = ExtResource("16_wsyuw")
stream_2/weight = 1.0
stream_3/stream = ExtResource("17_6dwbu")
stream_3/weight = 1.0
stream_4/stream = ExtResource("18_65au2")
stream_4/weight = 1.0
stream_5/stream = ExtResource("19_danf2")
stream_5/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_i2neh"]
streams_count = 11
stream_0/stream = ExtResource("20_ntyxb")
stream_0/weight = 1.0
stream_1/stream = ExtResource("21_traqb")
stream_1/weight = 1.0
stream_2/stream = ExtResource("23_hsdln")
stream_2/weight = 1.0
stream_3/stream = ExtResource("24_owb3o")
stream_3/weight = 1.0
stream_4/stream = ExtResource("25_8uy8o")
stream_4/weight = 1.0
stream_5/stream = ExtResource("26_526r8")
stream_5/weight = 1.0
stream_6/stream = ExtResource("27_vm211")
stream_6/weight = 1.0
stream_7/stream = ExtResource("28_0yhj6")
stream_7/weight = 1.0
stream_8/stream = ExtResource("29_8u3k5")
stream_8/weight = 1.0
stream_9/stream = ExtResource("30_ld8dl")
stream_9/weight = 1.0
stream_10/stream = ExtResource("22_pa0cl")
stream_10/weight = 1.0

[sub_resource type="ViewportTexture" id="ViewportTexture_pdvll"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Shader" id="Shader_2aaru"]
code = "shader_type canvas_item;

uniform sampler2D noise;
uniform float life : hint_range(0.0, 1.0, 0.0);

const float SIZE = 3.0;
const float SPEED = 10.0;

void fragment() {
	float LIFE = life * life;
	
	float dist = distance(vec2(0.5, 0.5), UV);
	vec4 vignette = vec4(dist * 0.3, 0.0, 0.0, LIFE * dist * 2.0);
	
	float dist2 = dist + 0.5;
	vec3 noise1 = texture(noise, mod((UV * SIZE + vec2(TIME * 1.14314, TIME * 0.131531) * SPEED), vec2(1.0, 1.0))).rgb * 0.25 * dist2;
	vec3 noise2 = texture(noise, mod((UV * SIZE - vec2(TIME * 0.5515314, TIME * 1.31513) * SPEED), vec2(1.0, 1.0))).rgb * 0.25 * dist2;
	
	COLOR = vignette + vec4(noise1 + noise2, LIFE * 0.2);
}
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l27o7"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_00pcc"]
width = 64
height = 64
noise = SubResource("FastNoiseLite_l27o7")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rggqw"]
shader = SubResource("Shader_2aaru")
shader_parameter/life = null
shader_parameter/noise = SubResource("NoiseTexture2D_00pcc")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_xqvjk")

[node name="AssetsHolder" type="Node3D" parent="."]

[node name="Potion" parent="AssetsHolder" instance=ExtResource("2_cw1pp")]

[node name="CameraHolder" type="Node3D" parent="."]

[node name="PlayerCamera" type="Camera3D" parent="CameraHolder"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
cull_mask = 1048571
current = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.343628, 0)
shape = SubResource("BoxShape3D_nngex")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(3, 3)
render_target_update_mode = 4

[node name="TopView" type="Camera3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, -2.59633e-08, 1, 0, -1, -2.59633e-08, 0, 1.74952, 0)
cull_mask = 1048573
fov = 57.7
size = 0.905

[node name="Octahedron" parent="." instance=ExtResource("5_nhg1m")]
transform = Transform3D(1.89925, 0, 0, 0, 1.22609, 0, 0, 0, 2.43034, 0, 0, 0)

[node name="ShaderHandler" parent="." instance=ExtResource("6_pq1f3")]
handledParameters = PackedStringArray("actionState")
parametersSpeed = PackedFloat32Array(4)

[node name="WaterShaderHandler" type="Node" parent="."]
script = ExtResource("7_bm8x7")

[node name="FootSoundEmission" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="FootSoundEmission"]
shape = SubResource("SphereShape3D_qvij2")

[node name="SneakSoundEmission" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SneakSoundEmission"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679292, 0)
shape = SubResource("SphereShape3D_xy7vv")

[node name="GrassStepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_lvwh6")
volume_db = -10.0
attenuation_filter_cutoff_hz = 20500.0

[node name="ConcreteStepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_8n2cv")
volume_db = -10.0
attenuation_filter_cutoff_hz = 20500.0

[node name="MetalStepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_i2neh")
volume_db = -10.0
attenuation_filter_cutoff_hz = 20500.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(143, 128)
scale = Vector2(95.3333, 85.3333)
texture = SubResource("ViewportTexture_pdvll")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_rggqw")
scale = Vector2(1280, 720)
texture = ExtResource("31_qwdlg")
centered = false

[node name="CameraLiberator" type="Node3D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("4_bpjyo")
player = NodePath("..")
